<resources>
    <string name="app_name">DevHires</string>

    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_with_google_account">Login with Google Account</string>
    <string name="register">REGISTER</string>
    <string name="personal">Personal</string>
    <string name="skills">Skills</string>
    <string name="experience">Experience</string>
    <string name="projects">Projects</string>
    <string name="text_Catherine_Ghobrial">Catherine Ghobrial</string>
    <string name="text_Frontend_Web_Developer">Frontend Web Developer</string>
    <string name="text_Exceed_Technology">Exceed Technology</string>
    <string name="text_Bio">Bio</string>
    <string name="sign_out">Sign out</string>
    <string name="text_Catherine_gh_gmail_com">Catherine.gh@gmail.com</string>
    <string name="text_1234567890">+12 345 67890</string>
    <string name="text_Engaged">Engaged</string>
    <string name="view_project">View Project</string>
    <string name="text_June_2018_Present">June 2018 - Present</string>
    <string name="text_CSS">CSS</string>
    <string name="github_username">GitHub Username</string>
    <string name="add">Add</string>
    <string name="text_connected">Connected</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_connect">Connect</string>
    <string name="text_add_skill">Add Skill</string>
    <string name="text_edit_skill">Edit Skill</string>
    <string name="text_skill_name">Skill Name</string>
    <string name="text_connect_to_github">Connect to GitHub</string>
    <string name="text_to_load_all_your_published_work">To load all your published work</string>
    <string name="text_title">Title</string>
    <string name="text_company">Company</string>
    <string name="text_email">Email Address</string>
    <string name="text_phone">Phone Number</string>
    <string name="text_marital_status">Marital Status</string>
    <string name="username">Username</string>
    <string name="sign_out_from_github">Sign out from Github</string>
    <string name="no_projects">No Projects</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Content Description -->
    <string name="image_splash">image_splash</string>
    <string name="image_login">image_login</string>
    <string name="image_toolbar">image_toolbar</string>
    <string name="image_arrow">image_arrow</string>
    <string name="image_empty_page">image_empty_page</string>
    <string name="image_github">image_github</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, pri an nostrud eloquentiam, vocibus fuisset an pro. Ne nibh assum cotidieque pri. Ea vero populo imperdiet sit, ei rebum admodum quo, stet persius scaevola ea eam. Id probo iriure electram has. Prodesset quaerendum theophrastus vix cu, vis sale inermis an.
</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


</resources>
