<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/personal"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appwidget_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:text="@string/username"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/appwidget_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:text="@string/text_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/appwidget_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:text="@string/text_company"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/appwidget_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:text="@string/text_phone"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/appwidget_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:text="@string/text_email"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/appwidget_maritalStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:text="@string/text_marital_status"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

</LinearLayout>