<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:visibility="gone"
            app:indicatorColor="@color/colorPrimaryDark"
            app:indicatorName="BallClipRotateIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/register_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/image_login"
            android:scaleType="fitXY"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_image" />

        <LinearLayout
            android:id="@+id/register_form"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_text">


            <EditText
                android:id="@+id/register_editText_email"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/ic_mail_blue"
                android:drawablePadding="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="12sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/register_editText_password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="12sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/register_editText_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="20dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="12sp"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/background_button"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/register_text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="20dp"
            android:gravity="bottom"
            android:text="@string/login"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_form" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>